--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,6 +4,7 @@
     <string name="stop_button">Detener</string>
     <string name="title_activity_settings">Ajustes</string>
     <string name="collector_info">Colector UDP: %1$s:%2$d</string>
+    <string name="tcp_collector_info">Recopilador TCP: %1$s:%2$d</string>
     <string name="http_server_status">Servidor HTTP: http://%1$s:%2$d</string>
     <string name="rcvd_and_sent">%1$s recibidos — %2$s enviados</string>
     <string name="query">Query</string>
@@ -22,10 +23,13 @@
     <string name="duration">Duración</string>
     <string name="http_server">Servidor HTTP</string>
     <string name="udp_exporter">Exportador UDP</string>
+    <string name="tcp_exporter">Exportador TCP</string>
+    <string name="tcp_udp_exporter">Exportador TCP/UDP</string>
     <string name="no_dump">Sin volcado</string>
     <string name="no_dump_info">El tráfico no será volcado</string>
     <string name="http_server_info">Inicia el servidor HTTP para la descarga de PCAP</string>
     <string name="udp_exporter_info">Envía el PCAP al colector remoto UDP</string>
+    <string name="tcp_exporter_info">Envía el PCAP a un receptor TCP remoto (pcap-over-ip)</string>
     <string name="http_server_port">Puerto del servidor HTTP</string>
     <string name="receiver_ip_address">Dirección IP del colector</string>
     <string name="receiver_port">Puerto del colector</string>
@@ -84,9 +88,11 @@
     <string name="search">Buscar…</string>
     <string name="app_val">App: %1$s</string>
     <string name="ip_address_val">Dirección IP: %1$s</string>
+    <string name="cidr_val">CIDR: %1$s</string>
     <string name="host_val">Host: %1$s</string>
     <string name="protocol_val">Protocolo: %1$s</string>
     <string name="hide">Ocultar…</string>
+    <string name="select">Seleccionar</string>
     <string name="n_selected">%1$d seleccionados</string>
     <string name="select_all">Seleccionar todo</string>
     <string name="app_details">Detalles de la app</string>
@@ -104,6 +110,9 @@
     <string name="unknown_app_info">\"Desconocido\" marca las conexiones cuya aplicación no se pudo determinar</string>
     <string name="packets_dropped">Paquetes perdidos</string>
     <string name="capture_prefs">Captura</string>
+    <string name="dump_extensions">Extensiones de PCAPdroid</string>
+    <string name="dump_extensions_summary">Extiende el formato de volcado de paquetes con metadatos adicionales, como la aplicación que envió/recibió un paquete determinado</string>
+    <string name="dump_extensions_how_to">Cómo mostrar las extensiones de volcado de PCAPdroid en Wireshark</string>
     <string name="pending_transaction">Por favor, completa tu transacción para canjear esta función</string>
     <string name="ctrl_consent">Una aplicación quiere capturar el tráfico de tu dispositivo.
 \nRecházala si no estás seguro</string>
@@ -140,6 +149,11 @@
     <string name="control_permissions">Permisos de control</string>
     <string name="control_permissions_summary">Comprueba qué aplicaciones pueden controlar la captura de PCAPdroid</string>
     <string name="control_permissions_item">%1$s: %2$s</string>
+    <string name="no_permissions_set_info">No se han establecido permisos. Invoque PCAPdroid mediante StartActivityForResult para mostrar el diálogo de permisos</string>
+    <string name="generate_api_key">Generar clave API</string>
+    <string name="show_api_key">Mostrar clave API</string>
+    <string name="api_key">Clave API</string>
+    <string name="api_key_discard_confirm">¿Realmente desea descartar la clave API actual y generar una nueva?</string>
     <string name="country">País</string>
     <string name="asn">ASN</string>
     <string name="country_val">País: %1$s</string>
@@ -158,6 +172,8 @@
     <string name="n_rules">Reglas %1$s</string>
     <string name="last_update_val">Última actualización: %1$s</string>
     <string name="malicious_connections">Conexiones maliciosas</string>
+    <string name="malicious_connection_description">Una conexión de la aplicación "%1$s" activó una regla de detección de malware (%2$s)</string>
+    <string name="malicious_connections_notice">Las listas negras pueden contener falsos positivos. Asegúrese de verificar la reputación de la dirección IP/dominio en línea. Puede excluir los falsos positivos a través de la lista blanca de malware</string>
     <string name="updated_blacklists">Lista negra actualizada</string>
     <string name="connections_checked">Conexiones revisadas</string>
     <string name="last_blacklists_update">Última actualización</string>
@@ -180,6 +196,12 @@
     <string name="copied">Copiado</string>
     <string name="network_interface">Interfaz</string>
     <string name="interface_filter">Interfaz: %1$s</string>
+    <string name="request_method">Método de solicitud</string>
+    <string name="content_type">Tipo de contenido</string>
+    <string name="http_status">Estado HTTP</string>
+    <string name="payload_size_threshold">Umbral de tamaño de contenido</string>
+    <string name="method_filter">Método: %1$s</string>
+    <string name="content_type_filter">Content-Type: %1$s</string>
     <string name="buy_action">Comprar</string>
     <string name="can_use_purchased_feature">Ahora puedes utilizar la función comprada</string>
     <string name="save_ok">Guardado</string>
@@ -276,8 +298,11 @@
     <string name="network_traffic">Tráfico</string>
     <string name="warn_no_app_data">No se han intercambiado datos</string>
     <string name="waiting_application_data">Esperando datos</string>
+    <string name="text">Texto</string>
     <string name="printable_text">Texto mostrable</string>
     <string name="hexdump">Hexadécimal</string>
+    <string name="display_as_text">Mostrar como texto</string>
+    <string name="display_as_hexdump">Mostrar como volcado hexadecimal</string>
     <string name="geolocation">Geolocalización</string>
     <string name="downloading">Descargando…</string>
     <string name="built_on">Montada en: %1$s</string>
@@ -314,7 +339,11 @@
     <string name="decryption_filter">Descifrado: %1$s</string>
     <string name="download_in_progress">Descarga en progreso, por favor espera</string>
     <string name="download_failed">Descarga fallida</string>
+    <string name="exporting">Exportando…</string>
+    <string name="export_in_progress">Exportación en curso, por favor espere</string>
     <string name="geo_db_not_found">Base de datos no encontrada. La geolocalización está deshabilitado</string>
+    <string name="geo_db_missing">Base de datos de geolocalización no encontrada</string>
+    <string name="country_rules_warning">Para usar reglas de cortafuegos basadas en países, descargue la base de datos de geolocalización desde los ajustes de PCAPdroid, de lo contrario las reglas basadas en países no tendrán efecto</string>
     <string name="database">Base de datos</string>
     <string name="no_root_firewall">Cortafuegos sin root</string>
     <string name="app_info">Información de la aplicación</string>
@@ -363,6 +392,8 @@
     <string name="license_service_unavailable">El servicio de licencias de PCAPdroid no está disponible ahora mismo. Vuelve a intentarlo en unos minutos</string>
     <string name="requesting_unlock_token">Solicitando token de desbloqueo, por favor espera</string>
     <string name="show_action">Mostrar</string>
+    <string name="show_connection">Mostrar conexión</string>
+    <string name="show_system_apps">Mostrar aplicaciones del sistema</string>
     <string name="unlock_token_msg1">Este es tu token de desbloqueo. Guárdalo, lo necesitarás para generar tus códigos de licencia <a href="%1$s"/></string>
     <string name="heap_usage">Uso del montón</string>
     <string name="vpn_lockdown_notice">Para evitar que las aplicaciones accedan a Internet cuando PCAPdroid no se está ejecutando (por ejemplo, después de reiniciar), puede configurar PCAPdroid como una VPN siempre activa en modo de bloqueo.
@@ -399,10 +430,12 @@
     <string name="redirect_to">Redirigir a:</string>
     <string name="original_port">Puerto de origen</string>
     <string name="required">obligatorio</string>
+    <string name="destination_host">Host de destino</string>
     <string name="destination_port">Puerto de destino</string>
     <string name="port_mapping_exists">Mapeo de puertos ya definido</string>
     <string name="items_delete_confirm">¿Borrar los elementos seleccionados\?</string>
     <string name="ip_address">Dirección IP</string>
+    <string name="ip_address_or_cidr">Dirección IP / CIDR</string>
     <string name="rule_exists">Norma ya definida</string>
     <string name="dns_servers">Servidores DNS</string>
     <string name="dns_servers_summary">Configurar los servidores DNS a utilizar durante la captura</string>
@@ -452,9 +485,12 @@
     <string name="pcap_file_not_exists">El archivo PCAP especificado no existe</string>
     <string name="open_pcap_file">Abrir el archivo PCAP…</string>
     <string name="pcap_load_success">Se ha cargado el archivo PCAP</string>
+    <string name="unsupported_pcap_file">Formato de archivo de captura no compatible</string>
+    <string name="decrypt_pcap_file">Descifrar archivo PCAP/Pcapng…</string>
     <string name="invalid_pcap_file">Fichero PCAP no válido</string>
     <string name="root_capture_start_failed">Fallo del inicio de captura. Asegúrate de que el dispositivo está rooteado con Magisk</string>
     <string name="pcap_read_error">Error de lectura del PCAP</string>
+    <string name="keylog_read_error">Error de lectura del registro de claves SSL</string>
     <string name="unsupported_pcap_datalink">El archivo PCAP tiene un enlace de datos no compatible</string>
     <string name="pcap_file_load_aborted">Carga del fichero PCAP abortada</string>
     <string name="host_resolution_failed">No se pudo resolver host %1$s</string>
@@ -483,6 +519,45 @@
     <string name="vpn_reconnection">Reconectar a la VPN</string>
     <string name="vpn_reconnection_aborted">Reconexión a la VPN abortada</string>
     <string name="waiting_for_vpn_disconnect">Esperando a que la VPN activa se desconecte…</string>
+    <string name="bytes_threshold">Umbral de bytes</string>
+    <string name="select_the_pcap_file">Seleccione el archivo PCAP/Pcapng</string>
+    <string name="select_the_keylog_file">Seleccione el archivo de registro de claves SSL</string>
+    <string name="error_code_with_text">%1$s (error %2$d)</string>
+    <string name="errno_epipe">Tubería rota</string>
+    <string name="errno_epipe_msg">El servidor cerró la conexión inesperadamente durante la transferencia de datos</string>
+    <string name="errno_enetdown">Red caída</string>
+    <string name="errno_enetdown_msg">La interfaz de red está caída o no puede conectarse a la red</string>
+    <string name="errno_enetunreach">Red inaccesible</string>
+    <string name="errno_enetunreach_msg">El sistema no puede encontrar una ruta válida hacia la red de destino</string>
+    <string name="errno_enetreset">Reinicio de red</string>
+    <string name="errno_enetreset_msg">La conexión de red fue reiniciada por un dispositivo intermediario (p. ej. enrutador u operador móvil)</string>
+    <string name="errno_econnaborted">Conexión cancelada</string>
+    <string name="errno_econnaborted_msg">La conexión fue cancelada, normalmente debido a un cambio de red</string>
+    <string name="errno_econnreset">Conexión reiniciada por el servidor</string>
+    <string name="errno_econnreset_msg">El servidor cerró la conexión abruptamente, normalmente debido a un fallo o un cierre no controlado</string>
+    <string name="errno_etimedout">Tiempo de conexión agotado</string>
+    <string name="errno_etimedout_msg">El servidor tardó demasiado en responder, probablemente debido a retrasos en la red o un servidor ocupado</string>
+    <string name="errno_econnrefused">Conexión rechazada</string>
+    <string name="errno_econnrefused_msg">El servidor rechazó la conexión, lo que puede indicar un servidor demasiado ocupado o con fallos</string>
+    <string name="errno_ehostunreach">Sin ruta al host</string>
+    <string name="errno_ehostunreach_msg">El sistema no puede encontrar una ruta hacia el host de destino</string>
+    <string name="dns_conn_info">DNS traduce un nombre de dominio a una dirección IP. Los datos reales se intercambian normalmente a través de conexiones HTTPS/TLS posteriores</string>
+    <string name="tls_conn_info">El tráfico TLS/HTTPS está cifrado. Para inspeccionar este tráfico, necesita descifrarlo. Consulte la <a href='%1$s'>guía de usuario</a> de PCAPdroid para más detalles</string>
+    <string name="tls_decryption_not_supported_16KB">El descifrado TLS no es compatible actualmente en dispositivos de 16 KB</string>
+    <string name="filename_prefix">Prefijo de nombre de archivo</string>
+    <string name="filename_prefix_description">Establece el prefijo para los archivos exportados por PCAPdroid, p. ej. archivos PCAP</string>
+    <string name="no_requests">Sin solicitudes</string>
+    <string name="item_not_found">No se pudo encontrar el elemento especificado</string>
+    <string name="connection_number">Conexión #%1$d</string>
+    <string name="http_request_number">Solicitud HTTP #%1$d</string>
+    <string name="http_requests">Solicitudes HTTP</string>
+    <string name="switch_to_http">Mostrar solicitudes HTTP</string>
+    <string name="switch_to_connections">Mostrar conexiones</string>
+    <string name="decryption_error">Error de descifrado</string>
+    <string name="previous">Anterior</string>
+    <string name="next">Siguiente</string>
+    <string name="save_as_text">Guardar como texto</string>
+    <string name="save_as_har">Guardar como HAR</string>
     <string name="restart_on_disconnection">Reiniciar al desconectarse</string>
     <string name="restart_on_disconnection_summary">Reiniciar automáticamente la captura después de ser detenido por otras aplicaciones VPN</string>
     <string name="ipv6_bytes_rcvd">Bytes IPv6 recibidos</string>
