--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="private_dns_hinders_detection">DNS Pribadi menghalangi deteksi</string>
     <string name="hide">Sembunyikan…</string>
+    <string name="select">Pilih</string>
     <string name="app_details">Detail aplikasi</string>
     <string name="n_selected">%1$d dipilih</string>
     <string name="package_name">Nama paket</string>
@@ -158,6 +159,12 @@
     <string name="valid">Sah</string>
     <string name="network_interface">Interface</string>
     <string name="interface_filter">Interface: %1$s</string>
+    <string name="request_method">Metode permintaan</string>
+    <string name="content_type">Tipe konten</string>
+    <string name="http_status">Status HTTP</string>
+    <string name="payload_size_threshold">Ambang batas ukuran muatan</string>
+    <string name="method_filter">Metode: %1$s</string>
+    <string name="content_type_filter">Content-Type: %1$s</string>
     <string name="loading">Memuat…</string>
     <string name="purchased">Dibeli</string>
     <string name="no_items_for_purchase">Tidak ada item yang tersedia untuk dibeli</string>
@@ -207,9 +214,13 @@
     <string name="network_traffic">Lalu lintas</string>
     <string name="warn_no_app_data">Tidak ada data aplikasi yang dipertukarkan</string>
     <string name="hexdump">Timbunan kode heksadesimal</string>
+    <string name="display_as_text">Tampilkan sebagai teks</string>
+    <string name="display_as_hexdump">Tampilkan sebagai hexdump</string>
     <string name="geolocation">Geolokasi</string>
     <string name="geolocation_summary">Tampilkan info negara dan ASN dengan melakukan pencarian offline</string>
     <string name="download_failed">Gagal mengunduh</string>
+    <string name="exporting">Mengekspor…</string>
+    <string name="export_in_progress">Ekspor sedang berlangsung, harap tunggu</string>
     <string name="database">Basis data</string>
     <string name="size_x">Ukuran: %1$s</string>
     <string name="geo_db_delete">Ketuk untuk menghapus basis data dan menghemat ruang</string>
@@ -231,6 +242,7 @@
     <string name="connection_start_not_seen">PCAPdroid belum melihat awal dari koneksi ini. Beberapa informasi mungkin hilang</string>
     <string name="decrypted">Didekripsi</string>
     <string name="waiting_application_data">Menunggu data</string>
+    <string name="text">Teks</string>
     <string name="display_as">Tampilkan sebagai…</string>
     <string name="printable_text">Teks yang dapat diprint</string>
     <string name="downloading">Mengunduh…</string>
@@ -362,6 +374,8 @@
     <string name="license_service_unavailable">Layanan lisensi PCAPdroid saat ini tidak tersedia. Silakan coba lagi dalam beberapa menit</string>
     <string name="requesting_unlock_token">Meminta sebuah unlock token, tunggu sebentar</string>
     <string name="show_action">Lihat</string>
+    <string name="show_connection">Lihat koneksi</string>
+    <string name="show_system_apps">Lihat aplikasi sistem</string>
     <string name="unlock_token_msg1">Ini adalah token pembuka kunci Anda. Catat karena Anda akan memerlukannya <a href="%1$s">untuk membuat kode lisensi</a></string>
     <string name="show_only_cleartext">Bersihkan koneksi teks</string>
     <string name="allowed_connection_filter">Di Izinkan</string>
@@ -430,6 +444,7 @@
     <string name="pcap_load_in_progress">Pemuatan file PCAP sedang berlangsung, harap tunggu</string>
     <string name="app_log">Riwayat</string>
     <string name="required">dibutuhkan</string>
+    <string name="destination_host">Host tujuan</string>
     <string name="pcapng_format">format Pcapng</string>
     <string name="ipv6_dns_server">Server DNS IPv6</string>
     <string name="port_mapping">Pemetaan port</string>
@@ -495,6 +510,21 @@
     <string name="errno_ehostunreach">Tidak ada rute ke host</string>
     <string name="errno_ehostunreach_msg">Sistem tidak dapat menemukan rute ke host tujuan</string>
     <string name="tls_conn_info">lalu lintas TLS/HTTPS dienkripsi. Untuk memeriksa lalu lintas ini, Anda perlu mendekripsinya. Cek <a href="%1$s">panduan pengguna</a> PCAPdroid untuk detailnya</string>
+    <string name="tls_decryption_not_supported_16KB">Dekripsi TLS saat ini tidak didukung pada perangkat 16 KB</string>
+    <string name="filename_prefix">Awalan nama file</string>
+    <string name="filename_prefix_description">Atur awalan untuk file yang diekspor oleh PCAPdroid, mis. file PCAP</string>
+    <string name="no_requests">Tidak ada permintaan</string>
+    <string name="item_not_found">Item yang ditentukan tidak ditemukan</string>
+    <string name="connection_number">Koneksi #%1$d</string>
+    <string name="http_request_number">Permintaan HTTP #%1$d</string>
+    <string name="http_requests">Permintaan HTTP</string>
+    <string name="switch_to_http">Lihat permintaan HTTP</string>
+    <string name="switch_to_connections">Lihat koneksi</string>
+    <string name="decryption_error">Kesalahan dekripsi</string>
+    <string name="previous">Sebelumnya</string>
+    <string name="next">Berikutnya</string>
+    <string name="save_as_text">Simpan sebagai teks</string>
+    <string name="save_as_har">Simpan sebagai HAR</string>
     <string name="dump_extensions_how_to">Cara menampilkan ekstensi pembuangan PCAPdroid di Wireshark</string>
     <string name="dump_extensions">Ekstensi PCAPdroid</string>
     <string name="errno_enetdown">Jaringan mati</string>
