--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -4,6 +4,7 @@
     <string name="stop_button">Stop</string>
     <string name="title_activity_settings">Ustawienia</string>
     <string name="collector_info">Kolektor UDP: %1$s:%2$d</string>
+    <string name="tcp_collector_info">Kolektor TCP: %1$s:%2$d</string>
     <string name="http_server_status">HTTP serwer: http://%1$s:%2$d</string>
     <string name="rcvd_and_sent">%1$s otrzymane — %2$s wysłane</string>
     <string name="query">Zapytanie</string>
@@ -22,10 +23,13 @@
     <string name="duration">Kierunek</string>
     <string name="http_server">HTTP serwer</string>
     <string name="udp_exporter">Eksport UDP</string>
+    <string name="tcp_exporter">Eksport TCP</string>
+    <string name="tcp_udp_exporter">Eksport TCP/UDP</string>
     <string name="no_dump">Bez wstrzymania</string>
     <string name="no_dump_info">Ruch nie zostanie wstrzymany</string>
     <string name="http_server_info">Uruchom serwer HTTP do pobierania PCAP</string>
     <string name="udp_exporter_info">Wysyła PCAP do zdalnego odbiornika UDP</string>
+    <string name="tcp_exporter_info">Wysyłaj PCAP do zdalnego odbiornika TCP (pcap-over-ip)</string>
     <string name="http_server_port">Port serwera HTTP</string>
     <string name="receiver_ip_address">Adres IP kolektora</string>
     <string name="receiver_port">Port kolektora</string>
@@ -44,6 +48,9 @@
     <string name="open_sockets">Otwarte sockets</string>
     <string name="bytes_sent">Wysłane bajty</string>
     <string name="bytes_rcvd">Bajty odebrane</string>
+    <string name="ipv6_bytes_sent">Bajty IPv6 wysłane</string>
+    <string name="ipv6_bytes_rcvd">Bajty IPv6 odebrane</string>
+    <string name="ipv6_bytes_percentage">Procent bajtów IPv6</string>
     <string name="packets_sent">Wysłane pakiety</string>
     <string name="packets_rcvd">Odebrane pakiety</string>
     <string name="dns_queries">Zapytania DNS</string>
@@ -59,6 +66,7 @@
     <string name="ok">OK</string>
     <string name="pcap_file_action">Ruch zapisany w pliku \"%1$s\".(%2$s)</string>
     <string name="delete_error">Nie udało się usunąć pliku</string>
+    <string name="copy_error">Nie można zapisać pliku</string>
     <string name="capture_running">Przechwytywanie działa</string>
     <string name="notification_msg">Przechwycono %1$s, połączenie %2$s</string>
     <string name="proto_and_port">%1$s, %2$d</string>
@@ -88,6 +96,7 @@
     <string name="socks5_info">SOCKS5 proxy: %1$s:%2$d</string>
     <string name="socks5_auth">Uwierzytelnianie SOCKS5n</string>
     <string name="socks5_auth_summary">Uwierzytelnij serwer proxy za pomocą nazwy użytkownika i hasła</string>
+    <string name="proxy_host">Host proxy</string>
     <string name="proxy_port">Port proxy</string>
     <string name="root_capture">Przechwyć jako root</string>
     <string name="root_capture_summary">Pozwala PCAPdroid działać z innymi aplikacjami VPN</string>
@@ -97,10 +106,12 @@
     <string name="search">Szukanie…</string>
     <string name="app_val">Apka: %1$s</string>
     <string name="ip_address_val">Adres IP: %1$s</string>
+    <string name="cidr_val">CIDR: %1$s</string>
     <string name="host_val">Host: %1$s</string>
     <string name="protocol_val">Protokół: %1$s</string>
     <string name="malware_whitelist_action">Biała lista (złośliwe oprogramowanie)…</string>
     <string name="hide">Ukrywanie…</string>
+    <string name="select">Wybierz</string>
     <string name="n_selected">Wybrano %1$d</string>
     <string name="select_all">Zaznacz wszystko</string>
     <string name="app_details">Szczegóły aplikacji</string>
@@ -119,6 +130,9 @@
     <string name="unknown_app_info">\„Nieznane\” oznacza połączenia, których aplikacji nie można określić</string>
     <string name="packets_dropped">Pakiety upuszczone</string>
     <string name="capture_prefs">Przechytywanie</string>
+    <string name="dump_extensions">Rozszerzenia PCAPdroid</string>
+    <string name="dump_extensions_summary">Rozszerz format zrzutu pakietów o dodatkowe metadane, takie jak aplikacja, która wysłała/odebrała dany pakiet</string>
+    <string name="dump_extensions_how_to">Jak wyświetlić rozszerzenia zrzutu PCAPdroid w Wireshark</string>
     <string name="pending_transaction">Dokończ transakcję, aby skorzystać z tej funkcji</string>
     <string name="ctrl_consent">Aplikacja chce przechwytywać ruch na Twoim urządzeniu.\nOdrzuć, jeśli nie masz pewności</string>
     <string name="deny">Odmowa</string>
@@ -157,6 +171,11 @@
     <string name="control_permissions">Kontroluj uprawnienia</string>
     <string name="control_permissions_summary">Sprawdź, które aplikacje mogą kontrolować przechwytywanie PCAPdroid</string>
     <string name="control_permissions_item">%1$s: %2$s</string>
+    <string name="no_permissions_set_info">Nie ustawiono uprawnień. Wywołaj PCAPdroid przez StartActivityForResult, aby wyświetlić monit o uprawnienia</string>
+    <string name="generate_api_key">Wygeneruj klucz API</string>
+    <string name="show_api_key">Pokaż klucz API</string>
+    <string name="api_key">Klucz API</string>
+    <string name="api_key_discard_confirm">Czy na pewno chcesz odrzucić bieżący klucz API i wygenerować nowy?</string>
     <string name="country">Kraj</string>
     <string name="asn">ASN</string>
     <string name="country_val">Kraj: %1$s</string>
@@ -176,6 +195,8 @@
     <string name="n_rules">%1$s reguły</string>
     <string name="last_update_val">Ostatnia aktualizacja: %1$s</string>
     <string name="malicious_connections">Złośliwe połączenia</string>
+    <string name="malicious_connection_description">Połączenie z aplikacji "%1$s" wywołało regułę wykrywania złośliwego oprogramowania (%2$s)</string>
+    <string name="malicious_connections_notice">Czarne listy mogą zawierać fałszywe alarmy. Upewnij się, że sprawdziłeś reputację adresu IP/domeny online. Możesz wykluczyć fałszywe alarmy za pomocą białej listy złośliwego oprogramowania</string>
     <string name="updated_blacklists">Zaktualizowane czarne listy</string>
     <string name="connections_checked">Połączenia sprawdzone</string>
     <string name="last_blacklists_update">Ostatnia aktualizacja</string>
@@ -204,6 +225,12 @@
     <string name="no_intent_handler_found">Nie znaleziono aplikacji do wykonania tej czynności</string>
     <string name="network_interface">Interfejs</string>
     <string name="interface_filter">Interfejs: %1$s</string>
+    <string name="request_method">Metoda żądania</string>
+    <string name="content_type">Typ zawartości</string>
+    <string name="http_status">Status HTTP</string>
+    <string name="payload_size_threshold">Próg rozmiaru payloadu</string>
+    <string name="method_filter">Metoda: %1$s</string>
+    <string name="content_type_filter">Content-Type: %1$s</string>
     <string name="loading">Ładowanie…</string>
     <string name="purchased">Zakupione</string>
     <string name="no_items_for_purchase">Brak przedmiotów do kupienia</string>
@@ -227,6 +254,7 @@
     <string name="mitm_setup_wizard">Mitm kreator konfiguracji</string>
     <string name="install_action">Instalacja</string>
     <string name="export_action">Eksport</string>
+    <string name="export_ellipsis">Eksportuj…</string>
     <string name="install_the_mitm_addon">Zainstaluj PCAPdroid <a href="%1$s">dodatek mitm</a></string>
     <string name="export_ca_certificate">Wyeksportuj certyfikat PCAPdroid CA, a następnie otwórz ustawienia Androida \"Szyfrowanie i poświadczenia\" i wybierz zainstaluj go jako \"Certyfikat CA\""</string>
     <string name="install_ca_certificate">Zainstaluj certyfikat PCAPdroid CA, wybierając \"VPN i aplikacje\". Android poprosi o ekran blokady lub hasło</string>
@@ -236,8 +264,11 @@
     <string name="cert_installed_correctly">Certyfikat CA jest zainstalowany</string>
     <string name="cert_reinstall_required">Certyfikat CA nie jest zainstalowany, uruchom kreatora instalacji mitm</string>
     <string name="mitm_addon_bad_version">Zła wersja dodatku PCAPdroid mitm. Zainstaluj wersję %1$s i spróbuj ponownie</string>
+    <string name="update_available">Dostępna aktualizacja</string>
+    <string name="mitm_addon_update_available">Dostępna jest nowa aktualizacja dodatku mitm. Zaktualizuj, aby uzyskać najnowsze poprawki błędów</string>
     <string name="mitm_addon_new_version">Dodatek PCAPdroid mitm musi zostać zaktualizowany</string>
     <string name="mitm_addon">Dodatek mitm</string>
+    <string name="update_action">Aktualizuj</string>
     <string name="export_failed">Eksport nie powiódł się</string>
     <string name="not_encrypted">Nie zaszyfrowane</string>
     <string name="request">Żądanie</string>
@@ -261,15 +292,23 @@
     <string name="network_traffic">Ruch</string>
     <string name="warn_no_app_data">Żadne dane aplikacji nie zostały wymienione</string>
     <string name="waiting_application_data">Oczekiwanie na dane</string>
+    <string name="text">Tekst</string>
     <string name="display_as">Wyświetl jako…</string>
     <string name="printable_text">Tekst do druku</string>
     <string name="hexdump">Zrzut szesnastkowy</string>
+    <string name="display_as_text">Wyświetl jako tekst</string>
+    <string name="display_as_hexdump">Wyświetl jako zrzut szesnastkowy</string>
     <string name="geolocation">Geolokalizacja</string>
     <string name="geolocation_summary">Pokaż informacje o kraju i ASN, przeprowadzając wyszukiwanie offline</string>
     <string name="downloading">Pobieranie…</string>
     <string name="download_in_progress">Trwa pobieranie, proszę czekać</string>
+    <string name="pcap_load_in_progress">Ładowanie pliku przechwytywania w toku, proszę czekać</string>
     <string name="download_failed">Pobieranie nie udane</string>
+    <string name="exporting">Eksportowanie…</string>
+    <string name="export_in_progress">Eksport w toku, proszę czekać</string>
     <string name="geo_db_not_found">Nie znaleziono bazy danych. Geolokalizacja jest wyłączona</string>
+    <string name="geo_db_missing">Brak bazy danych geolokalizacji</string>
+    <string name="country_rules_warning">Aby korzystać z reguł zapory opartych na krajach, pobierz bazę danych geolokalizacji z ustawień PCAPdroid, w przeciwnym razie reguły oparte na krajach będą nieskuteczne</string>
     <string name="database">Bazy danych</string>
     <string name="built_on">Zbudowany na: %1$s</string>
     <string name="geo_db_download">Stuknij, aby pobrać najnowszą bazę danych. Nowe bazy danych są dostępne co miesiąc</string>
@@ -359,6 +398,8 @@
     <string name="license_service_unavailable">Usługa licencji PCAPdroid jest obecnie niedostępna. Spróbuj ponownie za kilka minut</string>
     <string name="requesting_unlock_token">Prośba o token odblokowania, proszę czekać</string>
     <string name="show_action">Pokaż</string>
+    <string name="show_connection">Pokaż połączenie</string>
+    <string name="show_system_apps">Pokaż aplikacje systemowe</string>
     <string name="unlock_token_msg1">To jest twój token odblokowania. Zanotuj go, ponieważ będzie potrzebny <a href="%1$s">do wygenerowania kodów licencyjnych</a></string>
     <string name="paid_feature">Płatna funkcja</string>
     <string name="firewall_purchase_msg">Kup funkcję <i>%1$s</i>, aby zacząć blokować połączenia</string>
@@ -379,10 +420,12 @@
     <string name="redirect_to">Przekieruj do:</string>
     <string name="original_port">Oryginalny port</string>
     <string name="required">wymagany</string>
+    <string name="destination_host">Host docelowy</string>
     <string name="destination_port">Port docelowy</string>
     <string name="port_mapping_exists">Mapowanie portów jest już zdefiniowane</string>
     <string name="items_delete_confirm">Usunąć wybrane elementy?</string>
     <string name="ip_address">Adres IP</string>
+    <string name="ip_address_or_cidr">Adres IP / CIDR</string>
     <string name="rule_exists">Reguła już zdefiniowana</string>
     <string name="dns_servers">Serwery DNS</string>
     <string name="dns_servers_summary">Skonfiguruj serwery DNS, które mają być używane podczas przechwytywania</string>
@@ -412,5 +455,88 @@
     <string name="requesting_license">Żądanie kodu licencji, proszę czekać</string>
     <string name="license_activation_ok">Aktywacja licencji zakończona</string>
     <string name="mitm_addon_running">Dodatek Mitm jest uruchomiony</string>
+    <string name="decryption_rules">Reguły deszyfrowania</string>
+    <string name="decryption_rules_help">Te reguły określają, które połączenia mają być odszyfrowane. Reguły oparte na hostach działają tylko wtedy, gdy wcześniej otrzymano odpowiedź DNS</string>
+    <string name="decrypt_action">Odszyfruj…</string>
+    <string name="dont_decrypt_action">Nie odszyfrowuj…</string>
+    <string name="status_encrypted">Zaszyfrowane</string>
+    <string name="injected">Wstrzyknięte</string>
+    <string name="open_pcap_file">Otwórz plik PCAP/Pcapng…</string>
+    <string name="pcap_load_success">Plik przechwytywania załadowany</string>
+    <string name="unsupported_pcap_file">Nieobsługiwany format pliku przechwytywania</string>
+    <string name="decrypt_pcap_file">Odszyfruj plik PCAP/Pcapng…</string>
+    <string name="invalid_pcap_file">Nieprawidłowy format pliku przechwytywania</string>
+    <string name="capture_interface_open_error">Nie można otworzyć interfejsu przechwytywania</string>
+    <string name="unsupported_pcap_datalink">Plik zawiera nieobsługiwany typ łącza danych</string>
+    <string name="pcap_file_not_exists">Wskazany plik nie istnieje</string>
+    <string name="root_capture_start_failed">Błąd uruchomienia przechwytywania. Upewnij się, że urządzenie jest zrootowane za pomocą Magisk</string>
+    <string name="root_capture_pcapd_start_failure">Błąd uruchomienia przechwytywania. Upewnij się, że przyznałeś dostęp root aplikacji PCAPdroid</string>
+    <string name="pcap_read_error">Błąd odczytu pliku przechwytywania. Sprawdź dziennik, aby uzyskać szczegóły</string>
+    <string name="keylog_read_error">Błąd odczytu SSL keylog</string>
+    <string name="pcap_file_load_aborted">Ładowanie pliku przechwytywania przerwane</string>
+    <string name="host_resolution_failed">"Nie można rozwiązać hosta %1$s</string>
+    <string name="pcapdroid_trailer_notice">Aby wyświetlić rzeczywiste aplikacje zamiast "%1$s", włącz opcję "%2$s" przed wygenerowaniem zrzutu</string>
+    <string name="decryption_info_no_rule">Aby odszyfrować to połączenie, utwórz regułę deszyfrowania z panelu bocznego lub z menu kontekstowego na liście połączeń</string>
+    <string name="tls_decryption_no_rules_notice">Deszyfrowanie TLS jest stosowane tylko do połączeń pasujących do skonfigurowanych reguł. Czy chcesz teraz utworzyć reguły deszyfrowania?</string>
+    <string name="active_vpn_detected">Wykryto aktywny VPN</string>
+    <string name="mitm_doze_notice">Optymalizacja baterii może zakłócać działanie dodatku mitm</string>
+    <string name="redirected">przekierowano</string>
+    <string name="connection_redirected_port_map">To połączenie zostało przekierowane z powodu reguły mapowania portów</string>
+    <string name="dnscrypt_how_to">Jak używać DoH / DNSCrypt z PCAPdroid</string>
+    <string name="never">Nigdy</string>
+    <string name="always">Zawsze</string>
+    <string name="for_connections_to_decrypt">Tylko dla połączeń do odszyfrowania</string>
+    <string name="decrypt_quic_notice">Odszyfrowywanie QUIC nie jest obecnie obsługiwane. Jako obejście, zatrzymaj przechwytywanie i wybierz opcję blokowania QUIC w ustawieniach PCAPdroid</string>
+    <string name="target_apps">Aplikacje docelowe</string>
+    <string name="target_apps_help">Wybierz aplikacje do przechwytywania</string>
+    <string name="headers">Nagłówki</string>
+    <string name="body">Treść</string>
+    <string name="both">Oba</string>
+    <string name="whats_new">Co nowego</string>
+    <string name="raw_bytes">Surowe bajty</string>
+    <string name="restart_on_disconnection">Restart po rozłączeniu</string>
+    <string name="restart_on_disconnection_summary">Automatycznie restartuj przechwytywanie po zatrzymaniu przez inne aplikacje VPN</string>
+    <string name="vpn_reconnection">Ponowne połączenie VPN</string>
+    <string name="vpn_reconnection_aborted">Ponowne połączenie VPN przerwane</string>
+    <string name="waiting_for_vpn_disconnect">Oczekiwanie na rozłączenie aktywnego VPN…</string>
+    <string name="bytes_threshold">Próg bajtów</string>
+    <string name="select_the_pcap_file">Wybierz plik PCAP/Pcapng</string>
+    <string name="select_the_keylog_file">Wybierz plik SSL keylog</string>
+    <string name="error_code_with_text">%1$s (błąd %2$d)</string>
+    <string name="errno_epipe">Przerwany potok</string>
+    <string name="errno_epipe_msg">Serwer niespodziewanie zamknął połączenie podczas przesyłania danych</string>
+    <string name="errno_enetdown">Sieć jest wyłączona</string>
+    <string name="errno_enetdown_msg">Interfejs sieciowy jest wyłączony lub nie może połączyć się z siecią</string>
+    <string name="errno_enetunreach">Sieć jest nieosiągalna</string>
+    <string name="errno_enetunreach_msg">System nie może znaleźć prawidłowej trasy do sieci docelowej</string>
+    <string name="errno_enetreset">Reset sieci</string>
+    <string name="errno_enetreset_msg">Połączenie sieciowe zostało zresetowane przez urządzenie pośredniczące (np. router lub operator komórkowy)</string>
+    <string name="errno_econnaborted">Połączenie przerwane</string>
+    <string name="errno_econnaborted_msg">Połączenie zostało przerwane, zwykle z powodu zmiany sieci</string>
+    <string name="errno_econnreset">Połączenie zresetowane przez drugą stronę</string>
+    <string name="errno_econnreset_msg">Serwer nagle zamknął połączenie, zwykle z powodu awarii lub nieprawidłowego zamknięcia</string>
+    <string name="errno_etimedout">Przekroczono limit czasu połączenia</string>
+    <string name="errno_etimedout_msg">Serwer zbyt długo nie odpowiadał, prawdopodobnie z powodu opóźnień sieci lub obciążonego serwera</string>
+    <string name="errno_econnrefused">Połączenie odrzucone</string>
+    <string name="errno_econnrefused_msg">Serwer odrzucił połączenie, co może oznaczać zbyt obciążony lub wadliwy serwer</string>
+    <string name="errno_ehostunreach">Brak trasy do hosta</string>
+    <string name="errno_ehostunreach_msg">System nie może znaleźć trasy do hosta docelowego</string>
+    <string name="dns_conn_info">DNS tłumaczy nazwę domeny na adres IP. Właściwe dane są zazwyczaj wymieniane przez kolejne połączenia HTTPS/TLS</string>
+    <string name="tls_conn_info">Ruch TLS/HTTPS jest zaszyfrowany. Aby zbadać ten ruch, musisz go odszyfrować. Sprawdź <a href='%1$s'>podręcznik użytkownika</a> PCAPdroid, aby uzyskać szczegóły</string>
+    <string name="tls_decryption_not_supported_16KB">Deszyfrowanie TLS nie jest obecnie obsługiwane na urządzeniach 16 KB</string>
+    <string name="filename_prefix">Prefiks nazwy pliku</string>
+    <string name="filename_prefix_description">Ustaw prefiks plików eksportowanych przez PCAPdroid, np. plików PCAP</string>
+    <string name="no_requests">Brak żądań</string>
+    <string name="item_not_found">Nie można znaleźć określonego elementu</string>
+    <string name="connection_number">Połączenie #%1$d</string>
+    <string name="http_request_number">Żądanie HTTP #%1$d</string>
+    <string name="http_requests">Żądania HTTP</string>
+    <string name="switch_to_http">Pokaż żądania HTTP</string>
+    <string name="switch_to_connections">Pokaż połączenia</string>
+    <string name="decryption_error">Błąd deszyfrowania</string>
+    <string name="previous">Wstecz</string>
+    <string name="next">Dalej</string>
+    <string name="save_as_text">Zapisz jako tekst</string>
+    <string name="save_as_har">Zapisz jako HAR</string>
     <string name="mitm_addon_starting">Dodatek Mitm jest uruchamiany…</string>
 </resources>
