Fix wrong translations in de, es, pl, ta (AI assisted)
- pl: duration was "Kierunek" (Direction), fixed to "Czas trwania"
- pl: no_dump/no_dump_info said "pausing" instead of "dumping"
- ta: geolocation was "உலகம் நீக்கம்" (world removal), fixed to "புவிஇருப்பிடம்"
- ta: errno_ehostunreach used garbled "ஓச்டு" for host, fixed to "புரவலன்"
- ta: all port strings used "துறைமுகம்" (seaport/harbor), fixed to "போர்ட்"
- de: tls_conn_info had English "user" in "user Anleitung", fixed to "Benutzeranleitung"
- es: geo_db_not_found had wrong gender "deshabilitado", fixed to "deshabilitada"

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -518,7 +518,7 @@
     <string name="errno_ehostunreach">Keine Route zum Host</string>
     <string name="errno_ehostunreach_msg">Das System kann keine Route zum Ziel-Host finden</string>
     <string name="dns_conn_info">DNS übersetzt einen Domainnamen in eine IP-Adresse. Die tatsächlichen Daten werden typischerweise über nachfolgende HTTPS/TLS-Verbindungen ausgetauscht</string>
-    <string name="tls_conn_info">TLS/HTTPS-Verkehr ist verschlüsselt. Um diesen Traffic zu überprüfen, müssen Sie ihn entschlüsseln. Überprüfen Sie die PCAPdroid <a href="%1$s">user Anleitung</a> für Details</string>
+    <string name="tls_conn_info">TLS/HTTPS-Verkehr ist verschlüsselt. Um diesen Traffic zu überprüfen, müssen Sie ihn entschlüsseln. Überprüfen Sie die PCAPdroid <a href="%1$s">Benutzeranleitung</a> für Details</string>
     <string name="tls_decryption_not_supported_16KB">TLS-Entschlüsselung wird auf 16-KB-Geräten derzeit nicht unterstützt</string>
     <string name="dump_extensions_summary">Erweitern Sie das Paket-Dump-Format mit zusätzlichen Metadaten, wie die App, die ein bestimmtes Paket gesendet / empfangen</string>
     <string name="unsupported_pcap_file">Ununterstütztes Erfassungsdateiformat</string>
